<resources>
    <string name="app_name">FoodApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="would_you_like_to_eat">What would you like to eat</string>
    <string name="populate_items">Over populate items</string>
    <string name="category">Category: %s</string>
    <string name="area">Area: %s</string>
    <string name="instructions">- Instructions: </string>
    <string name="items">Items: %s</string>
</resources>